apply simple display

--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+
+    <div class="boardContainer">
+        <div class="board">
+            <div class="boardSquares" id="0"></div>
+            <div class="boardSquares" id="1"></div>
+            <div class="boardSquares" id="2"></div>
+            <div class="boardSquares" id="3"></div>
+            <div class="boardSquares" id="4"></div>
+            <div class="boardSquares" id="5"></div>
+            <div class="boardSquares" id="6"></div>
+            <div class="boardSquares" id="7"></div>
+            <div class="boardSquares" id="8"></div>
+        </div>
+    </div>
+
+    <div class="infoContainer">
+        <div class="playerWins" id="playerX">
+            <h1>X Wins:</h1>
+            <p>0</p>
+        </div>
+        <div class="playerWins" id="playerO">
+            <h1>O Wins:</h1>
+            <p>0</p>
+        </div>
+    </div>
+
+    <div class="newRoundBtnContainer">
+        <button class="newRoundBtn">New Round</button>
+    </div>
     
 </body>
 </html>
