track and display wins

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="infoContainer">
         <div class="playerWins" id="playerX">
             <h1>X Wins:</h1>
-            <p>0</p>
+            <p id="playerXWins">0</p>
         </div>
         <div class="playerWins" id="playerO">
             <h1>O Wins:</h1>
-            <p>0</p>
+            <p id="playerOWins">0</p>
         </div>
     </div>
 
