--- a/index.html
+++ b/index.html
@@ -5,38 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <title>Tic Tac Toe</title>
 </head>
 <body>
 
-    <div class="boardContainer">
-        <div class="board">
-            <div class="boardSquares" id="0"></div>
-            <div class="boardSquares" id="1"></div>
-            <div class="boardSquares" id="2"></div>
-            <div class="boardSquares" id="3"></div>
-            <div class="boardSquares" id="4"></div>
-            <div class="boardSquares" id="5"></div>
-            <div class="boardSquares" id="6"></div>
-            <div class="boardSquares" id="7"></div>
-            <div class="boardSquares" id="8"></div>
-        </div>
-    </div>
+    <div class="ticTacToeContainer">
 
-    <div class="infoContainer">
-        <div class="playerWins" id="playerX">
-            <h1>X Wins:</h1>
-            <p id="playerXWins">0</p>
+        <div class="boardContainer">
+            <div class="board">
+                <div class="boardSquares" id="0"></div>
+                <div class="boardSquares" id="1"></div>
+                <div class="boardSquares" id="2"></div>
+                <div class="boardSquares" id="3"></div>
+                <div class="boardSquares" id="4"></div>
+                <div class="boardSquares" id="5"></div>
+                <div class="boardSquares" id="6"></div>
+                <div class="boardSquares" id="7"></div>
+                <div class="boardSquares" id="8"></div>
+            </div>
         </div>
-        <div class="playerWins" id="playerO">
-            <h1>O Wins:</h1>
-            <p id="playerOWins">0</p>
-        </div>
-    </div>
 
-    <div class="newRoundBtnContainer">
-        <button class="newRoundBtn">New Round</button>
+        <div class="infoContainer">
+            <div class="playerWins" id="playerX">
+                <h1>X Wins:</h1>
+                <p id="playerXWins">0</p>
+            </div>
+            <div class="playerWins" id="playerO">
+                <h1>O Wins:</h1>
+                <p id="playerOWins">0</p>
+            </div>
+        </div>
+
+        <div class="gameText">
+            <h1>Tic Tac Toe</h1>
+            <h2>Three in a row</h2>
+        </div>
+
+        <div class="newRoundBtnContainer hidden">
+            <button class="newRoundBtn">New Round</button>
+        </div>
+
     </div>
     
 </body>
